# CthulhuWarsHaskell

./: .ghci  CthulhuWars.cabal  README.md
app/: Main.hs
src/CthulhuWars/: Faction.hs  FactionUnit.hs  Game.hs  GreatOldOne.hs  Maps.hs  Monster.hs  Player.hs  Region.hs  Spellbook.hs  Terror.hs  Token.hs
test/CthulhuWars/: GameSpec.hs
